--- a/jca-and-tomcat/pom.xml
+++ b/jca-and-tomcat/pom.xml
@@ -42,7 +42,7 @@
         <version.org.jboss.ironjacamar>1.4.22.Final</version.org.jboss.ironjacamar>
         <version.com.github.fungal>0.11.0.Final</version.com.github.fungal>
         <version.hibernate.validator>6.1.5.Final</version.hibernate.validator>
-        <version.javax.el>3.0.1-b11</version.javax.el>
+        <version.javax.el>3.0.4</version.javax.el>
         <version.narayana>5.12.2.Final-SNAPSHOT</version.narayana>
         <version.jboss.logging>3.1.4.GA</version.jboss.logging>
         <version.jboss.logging.spi>2.2.0.CR1</version.jboss.logging.spi>
@@ -132,7 +132,7 @@
         <dependency>
             <!-- for testing we need to provide this but for Tomcat deployment it's provided by Tomcat -->
             <groupId>org.glassfish</groupId>
-            <artifactId>javax.el</artifactId>
+            <artifactId>jakarta.el</artifactId>
             <version>${version.javax.el}</version>
             <scope>test</scope>
         </dependency>
